Noteworthy changes for version 0.10.19
===================================================

 * Save the crypto settings in a message draft.


Noteworthy changes for version 0.10.18 (2009-01-28)
===================================================

 * Handle OL created S/MIME messages.


Noteworthy changes for version 0.10.17 (2008-11-14)
===================================================

 * Minor cleanups.

 * All operations are now somewhat faster.


Noteworthy changes for version 0.10.16 (2008-11-11)
===================================================

 * Fixed a regression in the last release with opaque signatures.

 * Fixed PGP cleartext signature verification.

 * Encryption of attachments is now much faster.


Noteworthy changes for version 0.10.15 (2008-08-06)
===================================================

 * New option to present the body of a message as an attachment.  This
   is useful to make sure that the body will never show up as
   plaintext in the message store.

 * New menu item to remove all GpgOL created flags and attachments
   from all messages in a folder.

 * Icons are now installed for messages processed by GpgOL.  For now
   only for the German version of Outlook.


Noteworthy changes for version 0.10.14 (2008-05-28)
===================================================

 * Minor fixes.


Noteworthy changes for version 0.10.13 (2008-05-06)
===================================================

 * Properly handle the disposition of text attachments.


Noteworthy changes for version 0.10.12 (2008-04-16)
===================================================

 * Added icons. 

 * Minor usuability changes.


Noteworthy changes for version 0.10.11 (2008-04-04)
===================================================

 * Fixed a performance problem with signed+encrypted.


Noteworthy changes for version 0.10.10 (2008-04-02)
===================================================

 * Visual cleanups.

 * Changes to the I/O dispatcher.

